--- a/index.html
+++ b/index.html
@@ -160,84 +160,84 @@
         <!-- <div class="col-lg-8"> -->
           <table style='float: left;'>
             <tr>
-              <th class="col-lg-1">Date</th>
+              <th class="col-md-1">Date</th>
               <th class="col-lg-6">Speaker/Tutorial</th> 
-              <th class="col-lg-1">Time</th>
+              <th class="col-md-1">Time</th>
             </tr>
             <tr>
-              <td class="col-lg-1">8/28/19</td>
+              <td class="col-md-1">8/28/19</td>
               <td class="col-lg-6">Welcome Session! Pizza will be supplied! </td> 
-              <td class="col-lg-1">5-6PM</td>
+              <td class="col-md-1">5-6PM</td>
             </tr>
             <tr>
-              <td class="col-lg-1">9/4/19</td>
+              <td class="col-md-1">9/4/19</td>
               <td class="col-lg-6"> Github Tutorial </td>
-              <td class="col-lg-1">5-6PM</td>
+              <td class="col-md-1">5-6PM</td>
             </tr>
             <tr>
-              <td class="col-lg-1">9/13/19</td>
+              <td class="col-md-1">9/13/19</td>
               <td class="col-lg-6"> Open Coding Session </td>
-              <td class="col-lg-1">5-6PM</td>
+              <td class="col-md-1">5-6PM</td>
             </tr>
             <tr>
-              <td class="col-lg-1">9/20/19</td>
+              <td class="col-md-1">9/20/19</td>
               <td class="col-lg-6">Open Coding Session</td>
-              <td class="col-lg-1">5-7PM</td>
+              <td class="col-md-1">5-7PM</td>
             </tr>
             <tr>
-              <td class="col-lg-1">9/27/19</td>
+              <td class="col-md-1">9/27/19</td>
               <td class="col-lg-6">Open Coding Session </td>
-              <td class="col-lg-1">5-7PM</td>
+              <td class="col-md-1">5-7PM</td>
             </tr>
             <tr>
-              <td class="col-lg-1">10/4/19</td>
+              <td class="col-md-1">10/4/19</td>
               <td class="col-lg-6">Open Coding Session </td>
-              <td class="col-lg-1">5-7PM</td>
+              <td class="col-md-1">5-7PM</td>
             </tr>
             <tr>
-              <td class="col-lg-1">10/11/19</td>
+              <td class="col-md-1">10/11/19</td>
               <td class="col-lg-6">Sentieon on Precision Medicine Variant Calling</td>
-              <td class="col-lg-1">5-7PM</td>
+              <td class="col-md-1">5-7PM</td>
             </tr>
             <tr>
-              <td class="col-lg-1">10/18/19</td>
+              <td class="col-md-1">10/18/19</td>
               <td class="col-lg-6">Dr. William La Cava (Penn IBI)</td>
-              <td class="col-lg-1">5-7PM</td>
+              <td class="col-md-1">5-7PM</td>
             </tr>
             <tr>
-              <td class="col-lg-1">10/25/19</td>
+              <td class="col-md-1">10/25/19</td>
               <td class="col-lg-6">Dr. JD Grattepanche (Temple) on Metatranscriptomics</td>
-              <td class="col-lg-1">5-7PM</td>
+              <td class="col-md-1">5-7PM</td>
             </tr>
             <tr>
-              <td class="col-lg-1">11/1/19</td>
+              <td class="col-md-1">11/1/19</td>
               <td class="col-lg-6">Dr. Jocelyn Behm (Temple) on Species Declines in R</td>
-              <td class="col-lg-1">5-7PM</td>
+              <td class="col-md-1">5-7PM</td>
             </tr>
             <tr>
-              <td class="col-lg-1">11/8/19</td>
+              <td class="col-md-1">11/8/19</td>
               <td class="col-lg-6">Open Coding Session</td>
-              <td class="col-lg-1">5-7PM</td>
+              <td class="col-md-1">5-7PM</td>
             </tr>
             <tr>
-              <td class="col-lg-1">11/15/19</td>
+              <td class="col-md-1">11/15/19</td>
               <td class="col-lg-6">Open Coding Session</td>
-              <td class="col-lg-1">5-7PM</td>
+              <td class="col-md-1">5-7PM</td>
             </tr>
             <tr>
-              <td class="col-lg-1">11/22/19</td>
+              <td class="col-md-1">11/22/19</td>
               <td class="col-lg-6">Open Coding Session</td>
-              <td class="col-lg-1">5-7PM</td>
+              <td class="col-md-1">5-7PM</td>
             </tr>
             <tr>
-              <td class="col-lg-1">11/29/19</td>
+              <td class="col-md-1">11/29/19</td>
               <td class="col-lg-6">No session!  Happy Thanksgiving!</td>
-              <td class="col-lg-1"></td>
+              <td class="col-md-1"></td>
             </tr>
             <tr>
-              <td class="col-lg-1">12/6/19</td>
+              <td class="col-md-1">12/6/19</td>
               <td class="col-lg-6">Last Session! Pizza will be supplied!</td>
-              <td class="col-lg-1">5-6PM</td>
+              <td class="col-md-1">5-6PM</td>
             </tr>
             </table>
         <!-- </div>   -->
