just make two consecutive tables

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
       </div>
       <div class="row">
-        <!-- <div class="col-lg-8"> -->
+        <div class="col-lg-12">
           <table style='float: left;'>
             <tr>
               <th class="col-md-1">Date</th>
@@ -240,8 +240,8 @@
               <td class="col-md-1">5-6PM</td>
             </tr>
             </table>
-        <!-- </div>   -->
-        <!-- <div class="col-lg-4"> -->
+        </div>  
+        <div class="col-lg-12">
           <table style = 'float: left;'>
             <tr>
               <th>Available Tutorials</th>
@@ -274,8 +274,8 @@
               <td>Introduction to Libraries</td>
             </tr>
           </table>
-          <a class="btn btn-primary btn-lg text-uppercase" href="https://drive.google.com/drive/u/1/folders/0AB9vccD6QEfPUk9PVA">Google Drive</a>
-        <!-- </div> -->
+        </div>
+        <a class="btn btn-primary btn-lg text-uppercase" href="https://drive.google.com/drive/u/1/folders/0AB9vccD6QEfPUk9PVA">Google Drive</a>
       </div>
     </div>
   </section>
