try class="align-middle"

--- a/index.html
+++ b/index.html
@@ -160,118 +160,118 @@
         <div class="col-lg-12">
           <table style='float: left;'>
             <tr>
-              <th class="col-md-1">Date</th>
-              <th class="col-lg-6">Speaker/Tutorial</th> 
-              <th class="col-md-1">Time</th>
+              <th class="align-middle">Date</th>
+              <th class="align-middle">Speaker/Tutorial</th> 
+              <th class="align-middle">Time</th>
             </tr>
             <tr>
-              <td class="col-md-1">8/28/19</td>
-              <td class="col-lg-6">Welcome Session! Pizza will be supplied! </td> 
-              <td class="col-md-1">5-6PM</td>
+              <td class="align-middle">8/28/19</td>
+              <td class="align-middle">Welcome Session! Pizza will be supplied! </td> 
+              <td class="align-middle">5-6PM</td>
             </tr>
             <tr>
-              <td class="col-md-1">9/4/19</td>
-              <td class="col-lg-6"> Github Tutorial </td>
-              <td class="col-md-1">5-6PM</td>
+              <td class="align-middle">9/4/19</td>
+              <td class="align-middle"> Github Tutorial </td>
+              <td class="align-middle">5-6PM</td>
             </tr>
             <tr>
-              <td class="col-md-1">9/13/19</td>
-              <td class="col-lg-6"> Open Coding Session </td>
-              <td class="col-md-1">5-6PM</td>
+              <td class="align-middle">9/13/19</td>
+              <td class="align-middle"> Open Coding Session </td>
+              <td class="align-middle">5-6PM</td>
             </tr>
             <tr>
-              <td class="col-md-1">9/20/19</td>
-              <td class="col-lg-6">Open Coding Session</td>
-              <td class="col-md-1">5-7PM</td>
+              <td class="align-middle">9/20/19</td>
+              <td class="align-middle">Open Coding Session</td>
+              <td class="align-middle">5-7PM</td>
             </tr>
             <tr>
-              <td class="col-md-1">9/27/19</td>
-              <td class="col-lg-6">Open Coding Session </td>
-              <td class="col-md-1">5-7PM</td>
+              <td class="align-middle">9/27/19</td>
+              <td class="align-middle">Open Coding Session </td>
+              <td class="align-middle">5-7PM</td>
             </tr>
             <tr>
-              <td class="col-md-1">10/4/19</td>
-              <td class="col-lg-6">Open Coding Session </td>
-              <td class="col-md-1">5-7PM</td>
+              <td class="align-middle">10/4/19</td>
+              <td class="align-middle">Open Coding Session </td>
+              <td class="align-middle">5-7PM</td>
             </tr>
             <tr>
-              <td class="col-md-1">10/11/19</td>
-              <td class="col-lg-6">Sentieon on Precision Medicine Variant Calling</td>
-              <td class="col-md-1">5-7PM</td>
+              <td class="align-middle">10/11/19</td>
+              <td class="align-middle">Sentieon on Precision Medicine Variant Calling</td>
+              <td class="align-middle">5-7PM</td>
             </tr>
             <tr>
-              <td class="col-md-1">10/18/19</td>
-              <td class="col-lg-6">Dr. William La Cava (Penn IBI)</td>
-              <td class="col-md-1">5-7PM</td>
+              <td class="align-middle">10/18/19</td>
+              <td class="align-middle">Dr. William La Cava (Penn IBI)</td>
+              <td class="align-middle">5-7PM</td>
             </tr>
             <tr>
-              <td class="col-md-1">10/25/19</td>
-              <td class="col-lg-6">Dr. JD Grattepanche (Temple) on Metatranscriptomics</td>
-              <td class="col-md-1">5-7PM</td>
+              <td class="align-middle">10/25/19</td>
+              <td class="align-middle">Dr. JD Grattepanche (Temple) on Metatranscriptomics</td>
+              <td class="align-middle">5-7PM</td>
             </tr>
             <tr>
-              <td class="col-md-1">11/1/19</td>
-              <td class="col-lg-6">Dr. Jocelyn Behm (Temple) on Species Declines in R</td>
-              <td class="col-md-1">5-7PM</td>
+              <td class="align-middle">11/1/19</td>
+              <td class="align-middle">Dr. Jocelyn Behm (Temple) on Species Declines in R</td>
+              <td class="align-middle">5-7PM</td>
             </tr>
             <tr>
-              <td class="col-md-1">11/8/19</td>
-              <td class="col-lg-6">Open Coding Session</td>
-              <td class="col-md-1">5-7PM</td>
+              <td class="align-middle">11/8/19</td>
+              <td class="align-middle">Open Coding Session</td>
+              <td class="align-middle">5-7PM</td>
             </tr>
             <tr>
-              <td class="col-md-1">11/15/19</td>
-              <td class="col-lg-6">Open Coding Session</td>
-              <td class="col-md-1">5-7PM</td>
+              <td class="align-middle">11/15/19</td>
+              <td class="align-middle">Open Coding Session</td>
+              <td class="align-middle">5-7PM</td>
             </tr>
             <tr>
-              <td class="col-md-1">11/22/19</td>
-              <td class="col-lg-6">Open Coding Session</td>
-              <td class="col-md-1">5-7PM</td>
+              <td class="align-middle">11/22/19</td>
+              <td class="align-middle">Open Coding Session</td>
+              <td class="align-middle">5-7PM</td>
             </tr>
             <tr>
-              <td class="col-md-1">11/29/19</td>
-              <td class="col-lg-6">No session!  Happy Thanksgiving!</td>
-              <td class="col-md-1"></td>
+              <td class="align-middle">11/29/19</td>
+              <td class="align-middle">No session!  Happy Thanksgiving!</td>
+              <td class="align-middle"></td>
             </tr>
             <tr>
-              <td class="col-md-1">12/6/19</td>
-              <td class="col-lg-6">Last Session! Pizza will be supplied!</td>
-              <td class="col-md-1">5-6PM</td>
+              <td class="align-middle">12/6/19</td>
+              <td class="align-middle">Last Session! Pizza will be supplied!</td>
+              <td class="align-middle">5-6PM</td>
             </tr>
             </table>
         </div>  
         <div class="col-lg-12">
           <table style = 'float: left;'>
             <tr>
-              <th>Available Tutorials</th>
+              <th class="align-middle">Available Tutorials</th>
             </tr>
             <tr>
-              <td>Studio Bootstrap</td>
+              <td class="align-middle">Studio Bootstrap</td>
             </tr>
             <tr>
-              <td>Intro to Python: Variable Types</td>
+              <td class="align-middle">Intro to Python: Variable Types</td>
             </tr>
             <tr>
-              <td>Intro to Python: Loops & Conditional Statements</td>
+              <td class="align-middle">Intro to Python: Loops & Conditional Statements</td>
             </tr>
             <tr>
-              <td>PANDAS Introduction</td>
+              <td class="align-middle">PANDAS Introduction</td>
             </tr>
             <tr>
-              <td>Graphing: Matplotlib and Seaborn</td>
+              <td class="align-middle">Graphing: Matplotlib and Seaborn</td>
             </tr>
             <tr>
-              <td>Intro to Python: Variable Types</td>
+              <td class="align-middle">Intro to Python: Variable Types</td>
             </tr>
             <tr>
-              <td>Input/Output</td>
+              <td class="align-middle">Input/Output</td>
             </tr>
             <tr>
-              <td>Introduction to Functions</td>
+              <td class="align-middle">Introduction to Functions</td>
             </tr>
             <tr>
-              <td>Introduction to Libraries</td>
+              <td class="align-middle">Introduction to Libraries</td>
             </tr>
           </table>
         </div>
