table style issue?

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-24">
-          <table style='float: left;'>
+        <div class="col-lg-12">
+          <table style='float'>
             <tr>
               <th class="align-middle">Date</th>
               <th class="align-middle">Speaker/Tutorial</th> 
@@ -241,8 +241,8 @@
             </tr>
             </table>
         </div>  
-        <div class="col-lg-24">
-          <table style = 'float: left;'>
+        <div class="col-lg-12">
+          <table style = 'float'>
             <tr>
               <th class="align-middle">Available Tutorials</th>
             </tr>
