--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-12">
+        <!-- <div class="col-lg-12"> -->
           <table style='float'>
             <tr>
-              <th class="align-middle">Date</th>
+              <th class="align-middle">Date0</th>
               <th class="align-middle">Speaker/Tutorial</th> 
               <th class="align-middle">Time</th>
             </tr>
@@ -240,8 +240,8 @@
               <td class="align-middle">5-6PM</td>
             </tr>
             </table>
-        </div>  
-        <div class="col-lg-12">
+        <!-- </div>   -->
+        <!-- <div class="col-lg-12"> -->
           <table style = 'float'>
             <tr>
               <th class="align-middle">Available Tutorials</th>
@@ -274,7 +274,7 @@
               <td class="align-middle">Introduction to Libraries</td>
             </tr>
           </table>
-        </div>
+        <!-- </div> -->
         <a class="btn btn-primary btn-lg text-uppercase" href="https://drive.google.com/drive/u/1/folders/0AB9vccD6QEfPUk9PVA">Google Drive</a>
       </div>
     </div>
