align in the middle fail, but google button outside

--- a/index.html
+++ b/index.html
@@ -160,122 +160,122 @@
         <!-- <div class="col-lg-12"> -->
           <table style='float'>
             <tr>
-              <th class="align-middle">Date0</th>
-              <th class="align-middle">Speaker/Tutorial</th> 
-              <th class="align-middle">Time</th>
+              <th>Date1</th>
+              <th>Speaker/Tutorial</th> 
+              <th>Time</th>
             </tr>
             <tr>
-              <td class="align-middle">8/28/19</td>
-              <td class="align-middle">Welcome Session! Pizza will be supplied! </td> 
-              <td class="align-middle">5-6PM</td>
+              <td>8/28/19</td>
+              <td>Welcome Session! Pizza will be supplied! </td> 
+              <td>5-6PM</td>
             </tr>
             <tr>
-              <td class="align-middle">9/4/19</td>
-              <td class="align-middle"> Github Tutorial </td>
-              <td class="align-middle">5-6PM</td>
+              <td>9/4/19</td>
+              <td> Github Tutorial </td>
+              <td>5-6PM</td>
             </tr>
             <tr>
-              <td class="align-middle">9/13/19</td>
-              <td class="align-middle"> Open Coding Session </td>
-              <td class="align-middle">5-6PM</td>
+              <td>9/13/19</td>
+              <td> Open Coding Session </td>
+              <td>5-6PM</td>
             </tr>
             <tr>
-              <td class="align-middle">9/20/19</td>
-              <td class="align-middle">Open Coding Session</td>
-              <td class="align-middle">5-7PM</td>
+              <td>9/20/19</td>
+              <td>Open Coding Session</td>
+              <td>5-7PM</td>
             </tr>
             <tr>
-              <td class="align-middle">9/27/19</td>
-              <td class="align-middle">Open Coding Session </td>
-              <td class="align-middle">5-7PM</td>
+              <td>9/27/19</td>
+              <td>Open Coding Session </td>
+              <td>5-7PM</td>
             </tr>
             <tr>
-              <td class="align-middle">10/4/19</td>
-              <td class="align-middle">Open Coding Session </td>
-              <td class="align-middle">5-7PM</td>
+              <td>10/4/19</td>
+              <td>Open Coding Session </td>
+              <td>5-7PM</td>
             </tr>
             <tr>
-              <td class="align-middle">10/11/19</td>
-              <td class="align-middle">Sentieon on Precision Medicine Variant Calling</td>
-              <td class="align-middle">5-7PM</td>
+              <td>10/11/19</td>
+              <td>Sentieon on Precision Medicine Variant Calling</td>
+              <td>5-7PM</td>
             </tr>
             <tr>
-              <td class="align-middle">10/18/19</td>
-              <td class="align-middle">Dr. William La Cava (Penn IBI)</td>
-              <td class="align-middle">5-7PM</td>
+              <td>10/18/19</td>
+              <td>Dr. William La Cava (Penn IBI)</td>
+              <td>5-7PM</td>
             </tr>
             <tr>
-              <td class="align-middle">10/25/19</td>
-              <td class="align-middle">Dr. JD Grattepanche (Temple) on Metatranscriptomics</td>
-              <td class="align-middle">5-7PM</td>
+              <td>10/25/19</td>
+              <td>Dr. JD Grattepanche (Temple) on Metatranscriptomics</td>
+              <td>5-7PM</td>
             </tr>
             <tr>
-              <td class="align-middle">11/1/19</td>
-              <td class="align-middle">Dr. Jocelyn Behm (Temple) on Species Declines in R</td>
-              <td class="align-middle">5-7PM</td>
+              <td>11/1/19</td>
+              <td>Dr. Jocelyn Behm (Temple) on Species Declines in R</td>
+              <td>5-7PM</td>
             </tr>
             <tr>
-              <td class="align-middle">11/8/19</td>
-              <td class="align-middle">Open Coding Session</td>
-              <td class="align-middle">5-7PM</td>
+              <td>11/8/19</td>
+              <td>Open Coding Session</td>
+              <td>5-7PM</td>
             </tr>
             <tr>
-              <td class="align-middle">11/15/19</td>
-              <td class="align-middle">Open Coding Session</td>
-              <td class="align-middle">5-7PM</td>
+              <td>11/15/19</td>
+              <td>Open Coding Session</td>
+              <td>5-7PM</td>
             </tr>
             <tr>
-              <td class="align-middle">11/22/19</td>
-              <td class="align-middle">Open Coding Session</td>
-              <td class="align-middle">5-7PM</td>
+              <td>11/22/19</td>
+              <td>Open Coding Session</td>
+              <td>5-7PM</td>
             </tr>
             <tr>
-              <td class="align-middle">11/29/19</td>
-              <td class="align-middle">No session!  Happy Thanksgiving!</td>
-              <td class="align-middle"></td>
+              <td>11/29/19</td>
+              <td>No session!  Happy Thanksgiving!</td>
+              <td></td>
             </tr>
             <tr>
-              <td class="align-middle">12/6/19</td>
-              <td class="align-middle">Last Session! Pizza will be supplied!</td>
-              <td class="align-middle">5-6PM</td>
+              <td>12/6/19</td>
+              <td>Last Session! Pizza will be supplied!</td>
+              <td>5-6PM</td>
             </tr>
             </table>
         <!-- </div>   -->
         <!-- <div class="col-lg-12"> -->
           <table style = 'float'>
             <tr>
-              <th class="align-middle">Available Tutorials</th>
+              <th>Available Tutorials</th>
             </tr>
             <tr>
-              <td class="align-middle">Studio Bootstrap</td>
+              <td>Studio Bootstrap</td>
             </tr>
             <tr>
-              <td class="align-middle">Intro to Python: Variable Types</td>
+              <td>Intro to Python: Variable Types</td>
             </tr>
             <tr>
-              <td class="align-middle">Intro to Python: Loops & Conditional Statements</td>
+              <td>Intro to Python: Loops & Conditional Statements</td>
             </tr>
             <tr>
-              <td class="align-middle">PANDAS Introduction</td>
+              <td>PANDAS Introduction</td>
             </tr>
             <tr>
-              <td class="align-middle">Graphing: Matplotlib and Seaborn</td>
+              <td>Graphing: Matplotlib and Seaborn</td>
             </tr>
             <tr>
-              <td class="align-middle">Intro to Python: Variable Types</td>
+              <td>Intro to Python: Variable Types</td>
             </tr>
             <tr>
-              <td class="align-middle">Input/Output</td>
+              <td>Input/Output</td>
             </tr>
             <tr>
-              <td class="align-middle">Introduction to Functions</td>
+              <td>Introduction to Functions</td>
             </tr>
             <tr>
-              <td class="align-middle">Introduction to Libraries</td>
+              <td>Introduction to Libraries</td>
             </tr>
           </table>
         <!-- </div> -->
-        <a class="btn btn-primary btn-lg text-uppercase" href="https://drive.google.com/drive/u/1/folders/0AB9vccD6QEfPUk9PVA">Google Drive</a>
+        <a class="btn btn-primary btn-lg text-uppercase" href="https://drive.google.com/drive/u/1/folders/0AB9vccD6QEfPUk9PVA"> TUBioinfoStudio Google Drive</a>
       </div>
     </div>
   </section>
