--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <!-- <div class="col-lg-12"> -->
           <table style='float'>
             <tr>
-              <th>Date1</th>
+              <th>Date</th>
               <th>Speaker/Tutorial</th> 
               <th>Time</th>
             </tr>
@@ -206,12 +206,12 @@
             </tr>
             <tr>
               <td>10/25/19</td>
-              <td>Dr. JD Grattepanche (Temple) on Metatranscriptomics</td>
+              <td>Dr. Grattepanche (Temple) on Metatranscriptomics</td>
               <td>5-7PM</td>
             </tr>
             <tr>
               <td>11/1/19</td>
-              <td>Dr. Jocelyn Behm (Temple) on Species Declines in R</td>
+              <td>Dr. Jocelyn Behm (Temple) on Species Declines (R)</td>
               <td>5-7PM</td>
             </tr>
             <tr>
