so the middle content line width cannot easily be changed on bootstrap.

--- a/index.html
+++ b/index.html
@@ -206,12 +206,12 @@
             </tr>
             <tr>
               <td>10/25/19</td>
-              <td>Dr. Grattepanche (Temple) on Metatranscriptomics</td>
+              <td>Dr. Grattepanche (TU) on Metatranscriptomics</td>
               <td>5-7PM</td>
             </tr>
             <tr>
               <td>11/1/19</td>
-              <td>Dr. Jocelyn Behm (Temple) on Species Declines (R)</td>
+              <td>Dr. Jocelyn Behm (TU) on Species Declines (R)</td>
               <td>5-7PM</td>
             </tr>
             <tr>
