--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             </tr>
           </table>
         <!-- </div> -->
-        <a class="btn btn-primary btn-lg text-uppercase" href="https://drive.google.com/drive/u/1/folders/0AB9vccD6QEfPUk9PVA"> TUBioinfoStudio Google Drive</a>
+        <a class="btn btn-primary btn-lg text-uppercase" href="https://drive.google.com/drive/u/1/folders/0AB9vccD6QEfPUk9PVA"> CLICK HERE for TUBioinfoStudio Google Drive</a>
       </div>
     </div>
   </section>
