--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             </tr>
             <tr>
               <td>11/1/19</td>
-              <td>Dr. Jocelyn Behm (TU) on Species Declines (R)</td>
+              <td>Dr. Jocelyn Behm (TU) on Species Declines in R</td>
               <td>5-7PM</td>
             </tr>
             <tr>
