--- a/index.html
+++ b/index.html
@@ -292,25 +292,6 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/fm.jpg" alt="">
-            <h4>Francisco McGee</h4>
-            <p class="text-muted">Dojo Manager</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="https://github.com/alagauche">
-                  <i class="fab fa-github"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/francisco-mcgee/">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/jz.jpeg" alt="">
             <h4>Jordan Zehr</h4>
             <p class="text-muted">Project Manager</p>
@@ -347,8 +328,6 @@
             </ul>
           </div>
         </div>
-      </div>
-      <div class = "row">
         <div class="col-sm-4">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/al.jpg" alt="">
@@ -368,6 +347,8 @@
             </ul>
           </div>
         </div>
+      </div>
+      <div class = "row">
         <div class="col-sm-4">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/wk.png" alt="">
@@ -406,8 +387,6 @@
             </ul>
           </div>
         </div>
-      </div>
-      <div class = "row">
         <div class="col-sm-4">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/hk.png" alt="">
@@ -427,6 +406,8 @@
             </ul>
           </div>
         </div>
+      </div>
+      <div class = "row">
         <div class="col-sm-4">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/nm.JPG" alt="">
@@ -459,6 +440,25 @@
               </li>
               <li class="list-inline-item">
                 <a href="https://www.linkedin.com/in/gavinnewcomer/">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/qn.jpeg" alt="">
+            <h4>Quentin Novinger</h4>
+            <p class="text-muted">Coding Interview Advisor</p>
+            <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="">
+                  <i class="fab fa-github"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/quentin-novinger-0bb1b0185/">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
               </li>
