--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </div>
   </section>
 
-  <!-- Calendar test-->
+  <!-- Calendar-->
   <section class="page-section" id="Calendar">
     <div class="container">
       <div class="row">
