--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head> 
+<head>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -144,7 +144,8 @@
     </div>
   </section>
 
-  <!-- Calendar test-->
+  <!-- Calendar -->
+
   <section class="page-section" id="Calendar">
     <div class="container">
       <div class="row">
@@ -452,7 +453,7 @@
             <p class="text-muted">Coding Interview Advisor</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="https://github.com/regnivon/">
+                <a href="">
                   <i class="fab fa-github"></i>
                 </a>
               </li>
