--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/qn.jpeg" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/qn2.jpeg" alt="">
             <h4>Quentin Novinger</h4>
             <p class="text-muted">Coding Interview Advisor</p>
             <ul class="list-inline social-buttons">
