--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-file-code fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Dojo</h4>
+          <h4 class="service-heading">Preparation</h4>
           <p class="text-muted">Programming interview preparation and drills. Build out your Git portfolio with collaborative bioinformatics projects. Take your programming skills to the next level!</p>
         </div>
       </div>
