--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           </a>
           <h4 class="service-heading">Community</h4>
           <p class="text-muted">Our Bioinformatics Studio is an inclusive environment for bioinformatics at Temple University. Whether you’ve never coded before or you’re a coding whiz, we’ll help you jump into the mix!</p>
-          <a class="btn btn-primary btn-md text-uppercase" href="https://templebioinfo-del5037.slack.com/signup">Slack</a>
+          <a class="btn btn-primary btn-md text-uppercase" href="https://templebioinfo-del5037.slack.com/signup">Click here to join our Slack workspace</a>
         </div>
       </div>
       <div class = "row text-center">
