--- a/index.html
+++ b/index.html
@@ -149,40 +149,42 @@
 
   <!-- Section: Testimonials v.1 https://mdbootstrap.com/docs/jquery/sections/testimonials/ -->
 <section class="page-section" id="Testimonials">
-
-  <!-- Section heading -->
-  <h2 class="h1-responsive font-weight-bold my-5">Testimonials</h2>
-  <!-- Section description -->
-  <p class="dark-grey-text w-responsive mx-auto mb-5">Here's what our members have to say about the studio.</p>
-
-  <div class="row">
-    <div class="col-lg-4 col-md-12 mb-lg-0 mb-4">
-      <div class="card testimonial-card">
-        <div class="card-up cherry-color"></div>
-        <div class="avatar mx-auto white">
-          <img src="" class="rounded-circle img-fluid">
-        </div>
-        <div class="card-body">
-          <h4 class="font-weight-bold mb-4">Adam H.</h4>
-          <hr>
-          <p class="dark-grey-text mt-4"><i class="fas fa-quote-left pr-2"></i>Since joining the studio to learn about data analysis for research, I've learned tons about the different problems bioinformatics can overcome. The studio is an extremely helpful resource for anyone who wants to learn how to code or get help with approaching data from a computer science perspective.</p>
+  <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Testimonials</h2>
+          <p class="dark-grey-text w-responsive mx-auto mb-5">Here's what our members have to say about the studio.</p>
+            <div class="row">
+              <div class="col-lg-4 col-md-12 mb-lg-0 mb-4">
+                <div class="card testimonial-card">
+                <div class="card-up cherry-color"></div>
+                <div class="avatar mx-auto white">
+                <img src="" class="rounded-circle img-fluid">
+                </div>
+                <div class="card-body">
+                <h4 class="font-weight-bold mb-4">Adam H.</h4>
+                <hr>
+                <p class="dark-grey-text mt-4"><i class="fas fa-quote-left pr-2"></i>Since joining the studio to learn about data analysis for research, I've learned tons about the different problems bioinformatics can overcome. The studio is an extremely helpful resource for anyone who wants to learn how to code or get help with approaching data from a computer science perspective.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-md-0 mb-4">
+              <div class="card testimonial-card">
+                <div class="card-up cherry-color">
+                </div>
+                <div class="avatar mx-auto white">
+                  <img src="" class="rounded-circle img-fluid">
+                </div>
+                <div class="card-body">
+                  <h4 class="font-weight-bold mb-4">Quentin N.</h4>
+                  <hr>
+                  <p class="dark-grey-text mt-4"><i class="fas fa-quote-left pr-2"></i>The TU bioinformatics studio has been a great place to sharpen my coding skills with my peers as well as learn more about the field of bioinformatics from both an industrial and a research perspective.</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-lg-4 col-md-6 mb-md-0 mb-4">
-      <div class="card testimonial-card">
-        <div class="card-up cherry-color">
-        </div>
-        <div class="avatar mx-auto white">
-          <img src="" class="rounded-circle img-fluid">
-        </div>
-        <div class="card-body">
-          <h4 class="font-weight-bold mb-4">Quentin N.</h4>
-          <hr>
-          <p class="dark-grey-text mt-4"><i class="fas fa-quote-left pr-2"></i>The TU bioinformatics studio has been a great place to sharpen my coding skills with my peers as well as learn more about the field of bioinformatics from both an industrial and a research perspective.</p>
-        </div>
-      </div>
-    </div>
   </div>
 </section>
 <!-- Section: Testimonials v.1 -->
