--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
           <h2 class="section-heading text-uppercase">Testimonials</h2>
           <p class="dark-grey-text w-responsive mx-auto mb-5">Here's what our members have to say about the studio.</p>
             <div class="row">
-              <div class="col-lg-4 col-md-12 mb-lg-0 mb-4">
+              <div class="col-sm-6 text-center">
                 <div class="card testimonial-card">
-                <div class="card-up cherry-color"></div>
+                <div class="card-up"></div>
                 <div class="avatar mx-auto white">
                 <img src="" class="rounded-circle img-fluid">
                 </div>
@@ -168,9 +168,9 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 mb-md-0 mb-4">
+            <div class="col-sm-6 text-center">
               <div class="card testimonial-card">
-                <div class="card-up cherry-color">
+                <div class="card-up">
                 </div>
                 <div class="avatar mx-auto white">
                   <img src="" class="rounded-circle img-fluid">
