--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Testimonials</h2>
-          <p class="dark-grey-text w-responsive mx-auto mb-5">Here's what our members have to say about the studio.</p>
+          <h3 class="section-subheading text-muted">Here's what our members have to say about the studio.</h3>
             <div class="row">
               <div class="col-sm-6 text-center">
                 <div class="card testimonial-card">
