--- a/index.html
+++ b/index.html
@@ -199,10 +199,8 @@
           <a href = cal.html>
             <h2 class="section-heading text-uppercase">Calendar</h2>
           </a>
-          <h3 class="section-subheading text-muted">Schedule of events for the Fall 2019 semester</h3>
-          <h3 class="section-subheading text-muted">Meeting in SERC 6th floor seminar room</h3>
-          <h3 class="section-subheading text-muted">Send us a message on slack when you arrive at SERC if you do not have an access to this floor</h3>
-          <h3 class="section-subheading text-muted">(Spring 2020 schedule coming up)</h3>
+          <h3 class="section-subheading text-muted">Schedule of events for the Fall 2019 semester (Spring 2020 schedule coming up)</h3>
+          <h4 class="section-subheading text-muted">Meeting in SERC 6th floor seminar room.\nSend us a message on slack when you arrive at SERC if you do not have an access to this floor</h3>
         </div>
       </div>
       <div class="row">
